added keys and tests

--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderDBDiagramHTMLDocument.cshtml
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderDBDiagramHTMLDocument.cshtml
@@ -230,6 +230,7 @@ Tables:
         <tr>
             <td>Nr.</td>
             <td>Name</td>
+            <td>Type</td>
             <td>Relations</td>
             <td>Description</td>
         </tr>
@@ -277,6 +278,7 @@ Tables:
                         </table>
                     </div>
                 </td>
+                <td>@col.Properties["DATA_TYPE"]</td>
                 <td>@Raw(rel)</td>
                 <td>The field @col.Name is used for </td>
             </tr>
