--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderDBDiagramHTMLDocument.cshtml
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderDBDiagramHTMLDocument.cshtml
@@ -52,6 +52,10 @@
         public Dictionary<string, string> Properties = new Dictionary<string, string>();
         public List<Relation> Relations = new List<Relation>();
         public List<KeyTable> Keys = new List<KeyTable>();
+        public Column FromId(string id)
+        {
+            return Columns.First(it => it.Id == id);
+        }
         public string IdNode()
         {
             return string.Format("table{0}", Id);
@@ -65,6 +69,20 @@
         public bool IsPK(string columnId)
         {
             return this.Keys.Exists(it => it.ColumnId == columnId && it.TypeKey == "PRIMARY_KEY_CONSTRAINT");
+        }
+        public IEnumerable<Column> ArrangeByPKName()
+        {
+            var pks = this.Columns.Where(it => this.IsPK(it.Id)).OrderBy(it => it.Name).ToArray();
+            foreach (var c in pks)
+            {
+                yield return c;
+            }
+            var notPK = Columns.Except(pks).ToArray();
+            foreach (var c in notPK)
+            {
+                yield return c;
+            }
+
         }
         public bool HasPk()
         {
@@ -194,12 +212,15 @@ Summary:
             : @avgRelPerCol.ToString("0.0")
         </td>
     </tr>
-    <tr><td>Tables Without PK</td><td>
-    @foreach (var t in tablesNoPK)
-    {
-        <a href="#@t.Value.IdNode()">@t.Value.Name</a>
-    }
-</td></tr>
+    <tr>
+        <td>Tables Without PK</td>
+        <td>
+            @foreach (var t in tablesNoPK)
+            {
+                <a href="#@t.Value.IdNode()">@t.Value.Name</a>
+            }
+        </td>
+    </tr>
 </table>
 
 <br />
@@ -220,12 +241,12 @@ Tables:
         var idTable = curTable.Id;
         var idNode = curTable.IdNode();
         var relation = "";
-       
+
         var iRel = 0;
         foreach (var rel in curTable.Relations)
         {
             iRel++;
-            
+
 
             var tblRelated = tablesList[rel.referenced_object_id];
             var colRelate = tblRelated.Columns.First(it => it.Id == rel.referenced_column_id);
@@ -255,6 +276,7 @@ Tables:
     var idNode = string.Format("table{0}", idTable);
     var divProps = "props" + idNode;
     var iProp = 0;
+    var divKeys = "key" + idNode;
 
     <br />
 
@@ -272,6 +294,29 @@ Tables:
             }
         </table>
     </div>
+    <span onclick="javascript:toggledisplay('@divKeys')">
+        Show/hide Keys
+    </span>
+    <div id='@divKeys' style="display:none">
+
+        <table border="1" cellborder="1" cellspacing="0">
+            <tr><td>Nr</td><td>Key</td><td>Value</td><td>Column</td></tr>
+            @{
+                iProp = 0;
+            }
+
+            @foreach (var keyTable in curTable.Keys.OrderBy(it => it.Name))
+            {
+                <tr>
+                    <td>@(++iProp)</td>
+                    <td>@keyTable.Name</td>
+                    <td>@keyTable.TypeKey</td>
+                    <td>@curTable.FromId(keyTable.ColumnId).Name</td>
+                </tr>
+            }
+
+        </table>
+    </div>
 
     <p>
         Columns : @curTable.Columns.Count
@@ -284,7 +329,7 @@ Tables:
             <td>Relations</td>
             <td>Description</td>
         </tr>
-        @foreach (var col in curTable.Columns)
+        @foreach (var col in curTable.ArrangeByPKName())
         {
             iColumn++;
             var iRel = 0;
@@ -313,13 +358,13 @@ Tables:
             <tr>
                 <td>@iColumn</td>
                 <td port='@col.Id'>
-                    <b>@col.Name</b> 
+                    <b>@col.Name</b>
                     @if (isPK)
                     {
-                       <img src='http://pngimg.com/uploads/key/key_PNG1180.png' height="20" width="20" />
+                        <img src='http://pngimg.com/uploads/key/key_PNG1180.png' height="20" width="20" />
                     }
-                        
-                    
+
+
 
                     <span onclick="javascript:toggledisplay('@divPropsCol')">
                         (click for properties)
@@ -339,6 +384,8 @@ Tables:
                 <td>The field @col.Name is used for </td>
             </tr>
         }
+
+
     </table>
 
     <br />
